[package]
name = "photon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
arrayvec = "0.7.2"
uom = { version = "0.32.0", default-features = false, features = ["autoconvert", "f64", "si", "std", "try-from", "use_serde"]}
colortemp = "0.1.0"
float-cmp = "0.9.0"
itertools = "0.10.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_seeder = "0.2.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
lazy_static = "1.4.0"
